fixed problem with characters not encoded in the REST call query part